--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>  
 <title>My portfolio</title>
+<link rel="stylesheet" href="C:\Users\moi\OneDrive\Bureau\html\style.css">
 </head>
 <header>
   <div class="content">
@@ -10,13 +11,14 @@
     <i>powered by marwen</i>
     </hgroup>
   </div>
+</header>
 <body>
-      <section class="site">
-        <nav>
-          <a href="https://www.facebook.com/mawen.jackter">facebook</a>
-          <a href="https://www.instagram.com/marwenbengaid/">instagram</a>
-          <a href="https://twitter.com/MarwenBengayed">tweeter</a>
-          <a href="https://www.linkedin.com/in/marwen-benga%C3%AFd-8b676022b/">linkedin</a>
+      <section>
+        <nav class="site">
+          <a style="background-color: yellow;" href="https://www.facebook.com/mawen.jackter">facebook</a>
+          <a style="background-color: orange;" href="https://www.instagram.com/marwenbengaid/">instagram</a>
+          <a style="background-color: orangered;" href="https://twitter.com/MarwenBengayed">tweeter</a>
+          <a style="background-color: brown;" href="https://www.linkedin.com/in/marwen-benga%C3%AFd-8b676022b/">linkedin</a>
               </nav>
               <article>
               <blockquote>
@@ -147,15 +149,11 @@
 src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
 </iframe>
 </iframe>
-
                     </div>
                   </div>
                 </div>
-              </div>
-
-                       
+              </div> 
             </main>
-
       </section>
     </body>
 <footer class="footer">
@@ -173,14 +171,12 @@ Please provide your feedback in the form below
     Bad
   </label>
   </div>
-  
   <div class="form-check mx-3">
   <input class="form-check-input" type="radio" name="rating" id="rating_good" value="good">
   <label class="form-check-label" for="rating_good">
     Good
   </label>
   </div>
-  
   <div class="form-check mx-3">
   <input class="form-check-input"  type="radio" name="rating" id="rating_excellent" value="excellent">
   <label class="form-check-label" for="rating_excellent">
@@ -197,7 +193,6 @@ Please provide your feedback in the form below
     <label class="form-label" for="feedback_name">Your Name:</label>
     <input type="text" required name="name" class="form-control" id="feedback_name"/>
   </div>
-  
   <div class="col mb-4">
     <label class="form-label" for="feedback_email">Email:</label>
     <input type="email" name="email" required class="form-control" id="feedback_email"/>
@@ -205,7 +200,6 @@ Please provide your feedback in the form below
 </div>
 <button type="submit" class="btn btn-success btn-lg" >Post</button>
 </form>
-           
             <p>
                 &copy; Copyright 2023 logo
             </p>
