--- a/index.html
+++ b/index.html
@@ -2,24 +2,36 @@
 <html>
 <head>  
 <title>My portfolio</title>
-<link rel="stylesheet" href="C:\Users\moi\OneDrive\Bureau\html\style.css">
 </head>
 <header>
+<a href="file:///C:/Users/moi/OneDrive/Bureau/html/index.html#contact">home</a>
+<a href="">about</a>
+<a href="">work</a>
+<a href="">resume</a>
+ <a href="#contact">contact</a>
   <div class="content">
     <hgroup>
     <h1>logo</h1>
     <i>powered by marwen</i>
+    <br>
+   <!-- my contacts section -->
+   <div>
+    <h2 id="Socialactivities">Social media and contact</h2>
+   <nav class="site">
+    <a  href="https://www.facebook.com/mawen.jackter">facebook</a>
+    <a  href="https://www.instagram.com/marwenbengaid/">instagram</a>
+    <a href="https://twitter.com/MarwenBengayed">tweeter</a>
+    <a href="https://www.linkedin.com/in/marwen-benga%C3%AFd-8b676022b/">linkedin</a>
+    <br>
+    <br>
+   </nav>
+   </div>
     </hgroup>
   </div>
 </header>
+<!-- body section -->
 <body>
       <section>
-        <nav class="site">
-          <a style="background-color: yellow;" href="https://www.facebook.com/mawen.jackter">facebook</a>
-          <a style="background-color: orange;" href="https://www.instagram.com/marwenbengaid/">instagram</a>
-          <a style="background-color: orangered;" href="https://twitter.com/MarwenBengayed">tweeter</a>
-          <a style="background-color: brown;" href="https://www.linkedin.com/in/marwen-benga%C3%AFd-8b676022b/">linkedin</a>
-              </nav>
               <article>
               <blockquote>
                 <img src="http://d.gr-assets.com/authors/1397426898p5/203714.jpg" align="right"  style="width="128px" height="128px">“I invented nothing 
@@ -42,6 +54,7 @@
             </section>
             <main>
               <h1>My CV by logo</h1>
+              <!-- motivational quote resumed with as intro to the page  -->
               <blockquote>
               <img src="c:\Users\moi\Downloads\366090937_3552857988295336_2475495717155054243_n.jpg" alt="boy in a white shirt" style="width="128px" height="128px"
               <p><b>Professional profile:</b>I am a loyal and trustworthy employee who can work alone or as part of a team.
@@ -69,13 +82,7 @@
                     <div class="email"><a href="marobengayed@gmail.com"><i class="fas fa-envelope"></i><span>marwen bengaid</span></a></div>
                   <div class="follow">
                     <h3>Follow Me</h3>
-                    <div class="box">
-                      <a href="https://www.facebook.com/mawen.jackter" target="_blank"><i class="fab fa-facebook"></i></a>
-                      <a href="https://www.instagram.com/marwenbengaid/" target="_blank"><i class="fab fa-instagram "></i></a>
-                      <a href="https://twitter.com/MarwenBengayed" target="_blank"><i class="fab fa-tweeter"></i></a>
-                      <a href="https://www.linkedin.com/in/marwen-benga%C3%AFd-8b676022b/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                      <a href="https://codepen.io/astronaomical/" target="_blank"><i class="fab fa-codepen"></i></a>
-                      <a href="https://www.behance.net/astronaomical" target="_blank"><i class="fab fa-behance"></i></a>
+                    <button><a href="#Socialactivities">Find me here</a>
                     </div>
                   </div>
                   </div>
@@ -156,8 +163,10 @@ src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
             </main>
       </section>
     </body>
+<!-- footer section -->
 <footer class="footer">
         <div class="footer__text container">
+          <!-- feedback form -->
           <h2>Feedback</h2>
 <div class="mb-4 small">
 Please provide your feedback in the form below
@@ -205,37 +214,31 @@ Please provide your feedback in the form below
             </p>
             <hr class="footer__hr">
         </div>
+        <!-- contacts -->
         <div class="footer__sections container">
             <div class="footer__section">
+              <a id="contact"><strong>Tataouine hackerspace contacts here</strong></a>
+              <br>
                 <span class="footer__title">Find Out More</span>
-                <a href="#" class="footer__link">Link #1</a>
-                <a href="#" class="footer__link">Link #2</a>
-                <a href="#" class="footer__link">Link #3</a>
-                <a href="#" class="footer__link">Link #4</a>
+                <a href="https://gomycode.com/tn/fr/tataouine-hackerspace/">GoMyCode</a>
             </div>
             <div class="footer__section">
-                <span class="footer__title">Visit Our Stores</span>
-                <a href="#" class="footer__link">Link #1</a>
-                <a href="#" class="footer__link">Link #2</a>
+                <span class="footer__title">Visit us</span>
+                <a href="https://www.gstatic.com/images/icons/material/system_gm/1x/place_gm_blue_24dp.png" class="footer__link">GoMyCode Maps</a>
             </div>
             <div class="footer__section">
                 <span class="footer__title">Support Us</span>
-                <a href="#" class="footer__link">Link #1</a>
-                <a href="#" class="footer__link">Link #2</a>
-                <a href="#" class="footer__link">Link #3</a>
-                <a href="#" class="footer__link">Link #4</a>
-                <a href="#" class="footer__link">Link #5</a>
+                <a href="//www.facebook.com/gomycode/?locale=fr_FR">GoMyCode facebook</a>
             </div>
             <div class="footer__section">
                 <span class="footer__title">Follow Us Online!</span>
-                <a href="#" class="footer__link">Link #1</a>
-                <a href="#" class="footer__link">Link #2</a>
-                <a href="#" class="footer__link">Link #3</a>
+                <a href="https://www.instagram.com/gomycode/" class="footer__link">GoMyCode instagram</a>
             </div>
         </div>
         <div>
            <p>
           feel free to visit us where you can find us to follow us and support us . ;)
+
        </p>
       </div>
     </footer>
