--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="email"><a href="marobengayed@gmail.com"><i class="fas fa-envelope"></i><span>marwen bengaid</span></a></div>
                   <div class="follow">
                     <h3>Follow Me</h3>
-                    <button><a href="#Socialactivities">Find me here</a>
+                    <button><a href="#Socialactivities">Find me here</a></button>
                     </div>
                   </div>
                   </div>
